--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,11 +20,13 @@
         </activity>
         <activity android:name=".activities.MovieDetailActivity" />
 
+        <activity android:name=".activities.YouTubeActivity" android:screenOrientation="landscape"/>
+
         <meta-data
             android:name="http_client"
             android:value="OKHttpClient" />
 
-        <activity android:name=".activities.YouTubeActivity"></activity>
+
     </application>
 
 </manifest>
